Fix no-wrapping text and wrong margins in consent/styles.css

--- a/data/css/consent/styles.css
+++ b/data/css/consent/styles.css
@@ -2,6 +2,21 @@
     display: none;
 }
 
+#content {
+  width: auto;
+  margin: 0 20px;
+}
+
+#outer-wrapper {
+  min-width: 0;
+}
+
+#masthead {
+   width: auto;
+   margin-left: 0;
+   padding-left: 0;
+}
+
 .button-link {
     margin: 5px 10px;
     cursor: pointer;
